# python_basic_otus-homework_10

./: requirements-dev.txt  requirements.txt
.github/workflows/: pylint.yml  python-tests.yml
horseshop/: pyproject.toml
horseshop/horseshop/: urls.py
horseshop/product/management/commands/: fill_db1.py  fill_db2.py
horseshop/shopauth/: urls.py  views.py
